kubernetes/uservice-metricdeviation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: u-metricdev
  labels:
    name: u-metricdev
spec:
  type: NodePort
  ports:
  - name: http
    port: 5002
    targetPort: 5000
    protocol: TCP
  selector:
    name: u-metricdev
